# digit_recognition

./: README.md  main.py  pyproject.toml  requirements.txt  visualize_data.ipynb
modules/: helper_functions.py  neural_network.py
