[tool.poetry]
name = "digit-recognition"
version = "0.1.0"
description = ""
authors = ["Patrick <registmailacc@gmail.com>"]
readme = "README.md"
packages = [{include = "digit_recognition"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
